--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,7 +32,7 @@
 trigger:
   branches:
     include:
-    - '*'  # must quote since "*" is a YAML reserved character; we want a string
+    - 'test-branch*'  # must quote since "*" is a YAML reserved character; we want a string
 
 resources:
   containers:
@@ -57,31 +57,14 @@ variables:
   SECRET_S3_ACCESS_KEY: $[variables.IT_CASE_S3_ACCESS_KEY]
   SECRET_S3_SECRET_KEY: $[variables.IT_CASE_S3_SECRET_KEY]
 
-
 stages:
-  # CI / PR triggered stage:
-  - stage: ci
-    displayName: "CI build (custom builders)"
-    condition: not(eq(variables['MODE'], 'release'))
+  - stage: test_till_fail
+    displayName: "test until fail"
+    condition: eq(variables['MODE'], 'test')
     jobs:
-      - template: tools/azure-pipelines/jobs-template.yml
+      - template: tools/azure-pipelines/test-until-fail.yml
         parameters: # see template file for a definition of the parameters.
-          stage_name: ci_build
           test_pool_definition:
             vmImage: 'ubuntu-16.04'
-          e2e_pool_definition:
-            vmImage: 'ubuntu-16.04'
-          environment: PROFILE="-Dhadoop.version=2.8.3 -Dinclude_hadoop_aws -Dscala-2.11"
-          run_end_to_end: false
-          container: flink-build-container
-          jdk: jdk8
-  # CI / Special stage for release, e.g. building PyFlink wheel packages, etc:
-  - stage: ci_release
-    displayName: "CI build (release)"
-    condition: and(eq(variables['Build.Reason'], 'Manual'), eq(variables['MODE'], 'release'))
-    jobs:
-      - template: tools/azure-pipelines/build-python-wheels.yml
-        parameters:
-          stage_name: cron_python_wheels
           environment: PROFILE="-Dhadoop.version=2.8.3 -Dinclude_hadoop_aws -Dscala-2.11"
           container: flink-build-container
